src/lex_yacc/parser.output
Terminals unused in grammar

   F_CONSTANT
   TK_BIT_PT


State 34 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 85 conflicts: 1 shift/reduce


Grammar

    0 $accept: startA "end of file"

    1 startA: /* empty */
    2       | prog_block

    3 prog_block: cmd_text_line
    4           | macro_text_line
    5           | label_text_line
    6           | prog_block cmd_text_line
    7           | prog_block macro_text_line
    8           | prog_block label_text_line

    9 cmd_text_line: TK_CMD EOL
   10              | TK_CMD opand EOL
   11              | TK_CMD opand ',' opand EOL
   12              | TK_CMD opand ',' opand ',' opand EOL
   13              | TK_CMD opand ',' opand ',' opand ',' opand EOL

   14 opand: expr
   15      | '#' expr
   16      | '/' expr

   17 expr_elem: TK_KEYWORD
   18          | I_CONSTANT
   19          | STRING_LITERAL
   20          | TK_ACC
   21          | TK_C
   22          | TK_AB
   23          | TK_AT_DPTR
   24          | TK_DPTR
   25          | TK_AT_A_PLUS_PC
   26          | TK_AT_A_PLUS_DPTR
   27          | TK_AT_RI
   28          | TK_RN
   29          | TK_DOLLAR
   30          | '(' expr ')'

   31 not_expr: expr_elem
   32         | TK_NOT expr_elem
   33         | TK_HIGH expr_elem
   34         | TK_LOW expr_elem
   35         | expr_elem TK_SHL expr_elem
   36         | expr_elem TK_MOD expr_elem
   37         | expr_elem '.' expr_elem
   38         | expr_elem '&' expr_elem
   39         | expr_elem TK_SHIFT_RIGHT expr_elem
   40         | expr_elem TK_SHIFT_LEFT expr_elem

   41 multi_expr: not_expr
   42           | multi_expr '*' not_expr
   43           | multi_expr '/' not_expr
   44           | multi_expr '%' not_expr

   45 additive_expr: multi_expr
   46              | additive_expr '+' multi_expr
   47              | additive_expr '-' multi_expr

   48 expr: additive_expr

   49 macro_text_line: TK_MACRO EOL
   50                | TK_MACRO expr_elem EOL
   51                | TK_MACRO expr_elem expr_elem EOL
   52                | TK_KEYWORD TK_MACRO opand EOL
   53                | db_list EOL

   54 db_list: TK_DB opand
   55        | db_list ',' opand
   56        | db_list opand

   57 label_text_line: TK_KEYWORD ':'
   58                | label_text_line EOL


Terminals, with rules where they appear

"end of file" (0) 0
'#' (35) 15
'%' (37) 44
'&' (38) 38
'(' (40) 30
')' (41) 30
'*' (42) 42
'+' (43) 46
',' (44) 11 12 13 55
'-' (45) 47
'.' (46) 37
'/' (47) 16 43
':' (58) 57
error (256)
EOL (258) 9 10 11 12 13 49 50 51 52 53 58
TK_ACC (259) 20
TK_C (260) 21
TK_AB (261) 22
TK_AT_DPTR (262) 23
TK_DPTR (263) 24
TK_AT_A_PLUS_PC (264) 25
TK_AT_A_PLUS_DPTR (265) 26
TK_AT_RI (266) 27
TK_RN (267) 28
I_CONSTANT (268) 18
F_CONSTANT (269)
STRING_LITERAL (270) 19
TK_CMD (271) 9 10 11 12 13
TK_MACRO (272) 49 50 51 52
TK_KEYWORD (273) 17 52 57
TK_DOLLAR (274) 29
TK_NOT (275) 32
TK_HIGH (276) 33
TK_LOW (277) 34
TK_SHL (278) 35
TK_MOD (279) 36
TK_BIT_PT (280)
TK_DB (281) 54
TK_SHIFT_LEFT (282) 40
TK_SHIFT_RIGHT (283) 39


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
startA (42)
    on left: 1 2, on right: 0
prog_block (43)
    on left: 3 4 5 6 7 8, on right: 2 6 7 8
cmd_text_line (44)
    on left: 9 10 11 12 13, on right: 3 6
opand (45)
    on left: 14 15 16, on right: 10 11 12 13 52 54 55 56
expr_elem (46)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30, on right: 31
    32 33 34 35 36 37 38 39 40 50 51
not_expr (47)
    on left: 31 32 33 34 35 36 37 38 39 40, on right: 41 42 43 44
multi_expr (48)
    on left: 41 42 43 44, on right: 42 43 44 45 46 47
additive_expr (49)
    on left: 45 46 47, on right: 46 47 48
expr (50)
    on left: 48, on right: 14 15 16 30
macro_text_line (51)
    on left: 49 50 51 52 53, on right: 4 7
db_list (52)
    on left: 54 55 56, on right: 53 55 56
label_text_line (53)
    on left: 57 58, on right: 5 8 58


state 0

    0 $accept: . startA "end of file"
    1 startA: .  ["end of file"]
    2       | . prog_block
    3 prog_block: . cmd_text_line
    4           | . macro_text_line
    5           | . label_text_line
    6           | . prog_block cmd_text_line
    7           | . prog_block macro_text_line
    8           | . prog_block label_text_line
    9 cmd_text_line: . TK_CMD EOL
   10              | . TK_CMD opand EOL
   11              | . TK_CMD opand ',' opand EOL
   12              | . TK_CMD opand ',' opand ',' opand EOL
   13              | . TK_CMD opand ',' opand ',' opand ',' opand EOL
   49 macro_text_line: . TK_MACRO EOL
   50                | . TK_MACRO expr_elem EOL
   51                | . TK_MACRO expr_elem expr_elem EOL
   52                | . TK_KEYWORD TK_MACRO opand EOL
   53                | . db_list EOL
   54 db_list: . TK_DB opand
   55        | . db_list ',' opand
   56        | . db_list opand
   57 label_text_line: . TK_KEYWORD ':'
   58                | . label_text_line EOL

    TK_CMD      shift, and go to state 1
    TK_MACRO    shift, and go to state 2
    TK_KEYWORD  shift, and go to state 3
    TK_DB       shift, and go to state 4

    $default  reduce using rule 1 (startA)

    startA           go to state 5
    prog_block       go to state 6
    cmd_text_line    go to state 7
    macro_text_line  go to state 8
    db_list          go to state 9
    label_text_line  go to state 10


state 1

    9 cmd_text_line: TK_CMD . EOL
   10              | TK_CMD . opand EOL
   11              | TK_CMD . opand ',' opand EOL
   12              | TK_CMD . opand ',' opand ',' opand EOL
   13              | TK_CMD . opand ',' opand ',' opand ',' opand EOL
   14 opand: . expr
   15      | . '#' expr
   16      | . '/' expr
   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   31 not_expr: . expr_elem
   32         | . TK_NOT expr_elem
   33         | . TK_HIGH expr_elem
   34         | . TK_LOW expr_elem
   35         | . expr_elem TK_SHL expr_elem
   36         | . expr_elem TK_MOD expr_elem
   37         | . expr_elem '.' expr_elem
   38         | . expr_elem '&' expr_elem
   39         | . expr_elem TK_SHIFT_RIGHT expr_elem
   40         | . expr_elem TK_SHIFT_LEFT expr_elem
   41 multi_expr: . not_expr
   42           | . multi_expr '*' not_expr
   43           | . multi_expr '/' not_expr
   44           | . multi_expr '%' not_expr
   45 additive_expr: . multi_expr
   46              | . additive_expr '+' multi_expr
   47              | . additive_expr '-' multi_expr
   48 expr: . additive_expr

    EOL                shift, and go to state 11
    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    TK_NOT             shift, and go to state 25
    TK_HIGH            shift, and go to state 26
    TK_LOW             shift, and go to state 27
    '#'                shift, and go to state 28
    '/'                shift, and go to state 29
    '('                shift, and go to state 30

    opand          go to state 31
    expr_elem      go to state 32
    not_expr       go to state 33
    multi_expr     go to state 34
    additive_expr  go to state 35
    expr           go to state 36


state 2

   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   49 macro_text_line: TK_MACRO . EOL
   50                | TK_MACRO . expr_elem EOL
   51                | TK_MACRO . expr_elem expr_elem EOL

    EOL                shift, and go to state 37
    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    '('                shift, and go to state 30

    expr_elem  go to state 38


state 3

   52 macro_text_line: TK_KEYWORD . TK_MACRO opand EOL
   57 label_text_line: TK_KEYWORD . ':'

    TK_MACRO  shift, and go to state 39
    ':'       shift, and go to state 40


state 4

   14 opand: . expr
   15      | . '#' expr
   16      | . '/' expr
   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   31 not_expr: . expr_elem
   32         | . TK_NOT expr_elem
   33         | . TK_HIGH expr_elem
   34         | . TK_LOW expr_elem
   35         | . expr_elem TK_SHL expr_elem
   36         | . expr_elem TK_MOD expr_elem
   37         | . expr_elem '.' expr_elem
   38         | . expr_elem '&' expr_elem
   39         | . expr_elem TK_SHIFT_RIGHT expr_elem
   40         | . expr_elem TK_SHIFT_LEFT expr_elem
   41 multi_expr: . not_expr
   42           | . multi_expr '*' not_expr
   43           | . multi_expr '/' not_expr
   44           | . multi_expr '%' not_expr
   45 additive_expr: . multi_expr
   46              | . additive_expr '+' multi_expr
   47              | . additive_expr '-' multi_expr
   48 expr: . additive_expr
   54 db_list: TK_DB . opand

    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    TK_NOT             shift, and go to state 25
    TK_HIGH            shift, and go to state 26
    TK_LOW             shift, and go to state 27
    '#'                shift, and go to state 28
    '/'                shift, and go to state 29
    '('                shift, and go to state 30

    opand          go to state 41
    expr_elem      go to state 32
    not_expr       go to state 33
    multi_expr     go to state 34
    additive_expr  go to state 35
    expr           go to state 36


state 5

    0 $accept: startA . "end of file"

    "end of file"  shift, and go to state 42


state 6

    2 startA: prog_block .  ["end of file"]
    6 prog_block: prog_block . cmd_text_line
    7           | prog_block . macro_text_line
    8           | prog_block . label_text_line
    9 cmd_text_line: . TK_CMD EOL
   10              | . TK_CMD opand EOL
   11              | . TK_CMD opand ',' opand EOL
   12              | . TK_CMD opand ',' opand ',' opand EOL
   13              | . TK_CMD opand ',' opand ',' opand ',' opand EOL
   49 macro_text_line: . TK_MACRO EOL
   50                | . TK_MACRO expr_elem EOL
   51                | . TK_MACRO expr_elem expr_elem EOL
   52                | . TK_KEYWORD TK_MACRO opand EOL
   53                | . db_list EOL
   54 db_list: . TK_DB opand
   55        | . db_list ',' opand
   56        | . db_list opand
   57 label_text_line: . TK_KEYWORD ':'
   58                | . label_text_line EOL

    TK_CMD      shift, and go to state 1
    TK_MACRO    shift, and go to state 2
    TK_KEYWORD  shift, and go to state 3
    TK_DB       shift, and go to state 4

    $default  reduce using rule 2 (startA)

    cmd_text_line    go to state 43
    macro_text_line  go to state 44
    db_list          go to state 9
    label_text_line  go to state 45


state 7

    3 prog_block: cmd_text_line .

    $default  reduce using rule 3 (prog_block)


state 8

    4 prog_block: macro_text_line .

    $default  reduce using rule 4 (prog_block)


state 9

   14 opand: . expr
   15      | . '#' expr
   16      | . '/' expr
   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   31 not_expr: . expr_elem
   32         | . TK_NOT expr_elem
   33         | . TK_HIGH expr_elem
   34         | . TK_LOW expr_elem
   35         | . expr_elem TK_SHL expr_elem
   36         | . expr_elem TK_MOD expr_elem
   37         | . expr_elem '.' expr_elem
   38         | . expr_elem '&' expr_elem
   39         | . expr_elem TK_SHIFT_RIGHT expr_elem
   40         | . expr_elem TK_SHIFT_LEFT expr_elem
   41 multi_expr: . not_expr
   42           | . multi_expr '*' not_expr
   43           | . multi_expr '/' not_expr
   44           | . multi_expr '%' not_expr
   45 additive_expr: . multi_expr
   46              | . additive_expr '+' multi_expr
   47              | . additive_expr '-' multi_expr
   48 expr: . additive_expr
   53 macro_text_line: db_list . EOL
   55 db_list: db_list . ',' opand
   56        | db_list . opand

    EOL                shift, and go to state 46
    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    TK_NOT             shift, and go to state 25
    TK_HIGH            shift, and go to state 26
    TK_LOW             shift, and go to state 27
    ','                shift, and go to state 47
    '#'                shift, and go to state 28
    '/'                shift, and go to state 29
    '('                shift, and go to state 30

    opand          go to state 48
    expr_elem      go to state 32
    not_expr       go to state 33
    multi_expr     go to state 34
    additive_expr  go to state 35
    expr           go to state 36


state 10

    5 prog_block: label_text_line .  ["end of file", TK_CMD, TK_MACRO, TK_KEYWORD, TK_DB]
   58 label_text_line: label_text_line . EOL

    EOL  shift, and go to state 49

    $default  reduce using rule 5 (prog_block)


state 11

    9 cmd_text_line: TK_CMD EOL .

    $default  reduce using rule 9 (cmd_text_line)


state 12

   20 expr_elem: TK_ACC .

    $default  reduce using rule 20 (expr_elem)


state 13

   21 expr_elem: TK_C .

    $default  reduce using rule 21 (expr_elem)


state 14

   22 expr_elem: TK_AB .

    $default  reduce using rule 22 (expr_elem)


state 15

   23 expr_elem: TK_AT_DPTR .

    $default  reduce using rule 23 (expr_elem)


state 16

   24 expr_elem: TK_DPTR .

    $default  reduce using rule 24 (expr_elem)


state 17

   25 expr_elem: TK_AT_A_PLUS_PC .

    $default  reduce using rule 25 (expr_elem)


state 18

   26 expr_elem: TK_AT_A_PLUS_DPTR .

    $default  reduce using rule 26 (expr_elem)


state 19

   27 expr_elem: TK_AT_RI .

    $default  reduce using rule 27 (expr_elem)


state 20

   28 expr_elem: TK_RN .

    $default  reduce using rule 28 (expr_elem)


state 21

   18 expr_elem: I_CONSTANT .

    $default  reduce using rule 18 (expr_elem)


state 22

   19 expr_elem: STRING_LITERAL .

    $default  reduce using rule 19 (expr_elem)


state 23

   17 expr_elem: TK_KEYWORD .

    $default  reduce using rule 17 (expr_elem)


state 24

   29 expr_elem: TK_DOLLAR .

    $default  reduce using rule 29 (expr_elem)


state 25

   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   32 not_expr: TK_NOT . expr_elem

    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    '('                shift, and go to state 30

    expr_elem  go to state 50


state 26

   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   33 not_expr: TK_HIGH . expr_elem

    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    '('                shift, and go to state 30

    expr_elem  go to state 51


state 27

   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   34 not_expr: TK_LOW . expr_elem

    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    '('                shift, and go to state 30

    expr_elem  go to state 52


state 28

   15 opand: '#' . expr
   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   31 not_expr: . expr_elem
   32         | . TK_NOT expr_elem
   33         | . TK_HIGH expr_elem
   34         | . TK_LOW expr_elem
   35         | . expr_elem TK_SHL expr_elem
   36         | . expr_elem TK_MOD expr_elem
   37         | . expr_elem '.' expr_elem
   38         | . expr_elem '&' expr_elem
   39         | . expr_elem TK_SHIFT_RIGHT expr_elem
   40         | . expr_elem TK_SHIFT_LEFT expr_elem
   41 multi_expr: . not_expr
   42           | . multi_expr '*' not_expr
   43           | . multi_expr '/' not_expr
   44           | . multi_expr '%' not_expr
   45 additive_expr: . multi_expr
   46              | . additive_expr '+' multi_expr
   47              | . additive_expr '-' multi_expr
   48 expr: . additive_expr

    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    TK_NOT             shift, and go to state 25
    TK_HIGH            shift, and go to state 26
    TK_LOW             shift, and go to state 27
    '('                shift, and go to state 30

    expr_elem      go to state 32
    not_expr       go to state 33
    multi_expr     go to state 34
    additive_expr  go to state 35
    expr           go to state 53


state 29

   16 opand: '/' . expr
   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   31 not_expr: . expr_elem
   32         | . TK_NOT expr_elem
   33         | . TK_HIGH expr_elem
   34         | . TK_LOW expr_elem
   35         | . expr_elem TK_SHL expr_elem
   36         | . expr_elem TK_MOD expr_elem
   37         | . expr_elem '.' expr_elem
   38         | . expr_elem '&' expr_elem
   39         | . expr_elem TK_SHIFT_RIGHT expr_elem
   40         | . expr_elem TK_SHIFT_LEFT expr_elem
   41 multi_expr: . not_expr
   42           | . multi_expr '*' not_expr
   43           | . multi_expr '/' not_expr
   44           | . multi_expr '%' not_expr
   45 additive_expr: . multi_expr
   46              | . additive_expr '+' multi_expr
   47              | . additive_expr '-' multi_expr
   48 expr: . additive_expr

    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    TK_NOT             shift, and go to state 25
    TK_HIGH            shift, and go to state 26
    TK_LOW             shift, and go to state 27
    '('                shift, and go to state 30

    expr_elem      go to state 32
    not_expr       go to state 33
    multi_expr     go to state 34
    additive_expr  go to state 35
    expr           go to state 54


state 30

   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   30          | '(' . expr ')'
   31 not_expr: . expr_elem
   32         | . TK_NOT expr_elem
   33         | . TK_HIGH expr_elem
   34         | . TK_LOW expr_elem
   35         | . expr_elem TK_SHL expr_elem
   36         | . expr_elem TK_MOD expr_elem
   37         | . expr_elem '.' expr_elem
   38         | . expr_elem '&' expr_elem
   39         | . expr_elem TK_SHIFT_RIGHT expr_elem
   40         | . expr_elem TK_SHIFT_LEFT expr_elem
   41 multi_expr: . not_expr
   42           | . multi_expr '*' not_expr
   43           | . multi_expr '/' not_expr
   44           | . multi_expr '%' not_expr
   45 additive_expr: . multi_expr
   46              | . additive_expr '+' multi_expr
   47              | . additive_expr '-' multi_expr
   48 expr: . additive_expr

    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    TK_NOT             shift, and go to state 25
    TK_HIGH            shift, and go to state 26
    TK_LOW             shift, and go to state 27
    '('                shift, and go to state 30

    expr_elem      go to state 32
    not_expr       go to state 33
    multi_expr     go to state 34
    additive_expr  go to state 35
    expr           go to state 55


state 31

   10 cmd_text_line: TK_CMD opand . EOL
   11              | TK_CMD opand . ',' opand EOL
   12              | TK_CMD opand . ',' opand ',' opand EOL
   13              | TK_CMD opand . ',' opand ',' opand ',' opand EOL

    EOL  shift, and go to state 56
    ','  shift, and go to state 57


state 32

   31 not_expr: expr_elem .  [EOL, TK_ACC, TK_C, TK_AB, TK_AT_DPTR, TK_DPTR, TK_AT_A_PLUS_PC, TK_AT_A_PLUS_DPTR, TK_AT_RI, TK_RN, I_CONSTANT, STRING_LITERAL, TK_KEYWORD, TK_DOLLAR, TK_NOT, TK_HIGH, TK_LOW, ',', '#', '/', '(', ')', '*', '%', '+', '-']
   35         | expr_elem . TK_SHL expr_elem
   36         | expr_elem . TK_MOD expr_elem
   37         | expr_elem . '.' expr_elem
   38         | expr_elem . '&' expr_elem
   39         | expr_elem . TK_SHIFT_RIGHT expr_elem
   40         | expr_elem . TK_SHIFT_LEFT expr_elem

    TK_SHL          shift, and go to state 58
    TK_MOD          shift, and go to state 59
    TK_SHIFT_LEFT   shift, and go to state 60
    TK_SHIFT_RIGHT  shift, and go to state 61
    '.'             shift, and go to state 62
    '&'             shift, and go to state 63

    $default  reduce using rule 31 (not_expr)


state 33

   41 multi_expr: not_expr .

    $default  reduce using rule 41 (multi_expr)


state 34

   42 multi_expr: multi_expr . '*' not_expr
   43           | multi_expr . '/' not_expr
   44           | multi_expr . '%' not_expr
   45 additive_expr: multi_expr .  [EOL, TK_ACC, TK_C, TK_AB, TK_AT_DPTR, TK_DPTR, TK_AT_A_PLUS_PC, TK_AT_A_PLUS_DPTR, TK_AT_RI, TK_RN, I_CONSTANT, STRING_LITERAL, TK_KEYWORD, TK_DOLLAR, TK_NOT, TK_HIGH, TK_LOW, ',', '#', '/', '(', ')', '+', '-']

    '/'  shift, and go to state 64
    '*'  shift, and go to state 65
    '%'  shift, and go to state 66

    '/'       [reduce using rule 45 (additive_expr)]
    $default  reduce using rule 45 (additive_expr)


state 35

   46 additive_expr: additive_expr . '+' multi_expr
   47              | additive_expr . '-' multi_expr
   48 expr: additive_expr .  [EOL, TK_ACC, TK_C, TK_AB, TK_AT_DPTR, TK_DPTR, TK_AT_A_PLUS_PC, TK_AT_A_PLUS_DPTR, TK_AT_RI, TK_RN, I_CONSTANT, STRING_LITERAL, TK_KEYWORD, TK_DOLLAR, TK_NOT, TK_HIGH, TK_LOW, ',', '#', '/', '(', ')']

    '+'  shift, and go to state 67
    '-'  shift, and go to state 68

    $default  reduce using rule 48 (expr)


state 36

   14 opand: expr .

    $default  reduce using rule 14 (opand)


state 37

   49 macro_text_line: TK_MACRO EOL .

    $default  reduce using rule 49 (macro_text_line)


state 38

   17 expr_elem: . TK_KEYWORD
   18          | . I_CONSTANT
   19          | . STRING_LITERAL
   20          | . TK_ACC
   21          | . TK_C
   22          | . TK_AB
   23          | . TK_AT_DPTR
   24          | . TK_DPTR
   25          | . TK_AT_A_PLUS_PC
   26          | . TK_AT_A_PLUS_DPTR
   27          | . TK_AT_RI
   28          | . TK_RN
   29          | . TK_DOLLAR
   30          | . '(' expr ')'
   50 macro_text_line: TK_MACRO expr_elem . EOL
   51                | TK_MACRO expr_elem . expr_elem EOL

    EOL                shift, and go to state 69
    TK_ACC             shift, and go to state 12
    TK_C               shift, and go to state 13
    TK_AB              shift, and go to state 14
    TK_AT_DPTR         shift, and go to state 15
    TK_DPTR            shift, and go to state 16
    TK_AT_A_PLUS_PC    shift, and go to state 17
    TK_AT_A_PLUS_DPTR  shift, and go to state 18
    TK_AT_RI           shift, and go to state 19
    TK_RN              shift, and go to state 20
    I_CONSTANT         shift, and go to state 21
    STRING_LITERAL     shift, and go to state 22
    TK_KEYWORD         shift, and go to state 23
    TK_DOLLAR          shift, and go to state 24
    '('                shift, and go to state 30

    expr_elem  go to state 70


state 39
